sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: not found: value x
  while(!x==n)
         ^AlgGnomeSort:8: error: not found: value x
    if(x==0)
       ^AlgGnomeSort:10: error: not found: value x
      x+=1
      ^AlgGnomeSort:12: error: not found: value i
    if(!plusPetit(i-1,i+1))
                  ^AlgGnomeSort:12: error: not found: value i
    if(!plusPetit(i-1,i+1))
                      ^AlgGnomeSort:14: error: not found: value i
      echange(i-1,i+1)
              ^AlgGnomeSort:14: error: not found: value i
      echange(i-1,i+1)
                  ^AlgGnomeSort:15: error: not found: value x
      x-=1
      ^AlgGnomeSort:19: error: not found: value x
      x+=1
      ^